# ICorNet

./: .env  .env.example  .gitignore  .replit  Dockerfile.backend  README.md  app.py  config.py  docker-compose.yml  docker-requirements.txt  init.sql  main.py  migrate_chat_types.py  migrate_db.py  migrate_docker.sh  migrate_reports_table.sql  models.py  pyproject.toml  replit.md
attached_assets/: Pasted--backend-1-ERROR-root-Get-recent-reports-error-psycopg2-errors-UndefinedColumn-column-reports-1753692167873_1753692167873.txt  Pasted--n-identity-1515-labels-SUK-properties--1753361266473_1753361266474.txt  Pasted--output-prodotti-soluzioni-esistenti-nome-azienda-Neurality-prodotto-soluzione--1753447774134_1753447774135.txt  Pasted-Descrizione-Generale-Sviluppa-un-applicazione-web-full-stack-per-l-analisi-di-dati-aziendali-che-in-1753343066185_1753343066185.txt  Pasted-Uncaught-SyntaxError-http-localhost-8001-js-components-SUK-js-Unexpected-token-expected-11-1753367300860_1753367300861.txt  Pasted-Warning-ReactDOM-render-is-no-longer-supported-in-React-18-Use-createRoot-instead-Until-you-switc-1753360769859_1753360769859.txt  Pasted-api-js-21-GET-http-localhost-8001-api-suk-chat-chat-history-500-INTERNAL-SERVER-ERROR-request--1753694151673_1753694151673.txt  Pasted-app-js-189-Uncaught-ReferenceError-SUK-is-not-defined-at-renderCurrentPage-anonymous-295-49-1753368134491_1753368134491.txt  Pasted-backend-1-Traceback-most-recent-call-last-backend-1-File-usr-local-lib-python3-11-site-1753691738428_1753691738428.txt  (+2 more)
routes/: auth.py  dashboard.py  reports.py  startup_chat.py  (+1 more)
(+16 files in other folders)
