[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-sqlalchemy>=3.1.1",
    "neo4j>=5.28.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
    "gunicorn>=22.0.0",
    "python-dotenv>=1.0.0",
]
